{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 101,
  "lineage": "81578baa-b84e-0d42-cb68-83a68aee898d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02744b64b10d9027b",
            "arn": "arn:aws:ec2:us-east-1:610203850228:elastic-ip/eipalloc-02744b64b10d9027b",
            "domain": "vpc",
            "id": "eipalloc-02744b64b10d9027b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-22-25-37.compute-1.amazonaws.com",
            "public_ip": "107.22.25.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natgw-eip"
            },
            "tags_all": {
              "Name": "natgw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06beb07943797a85b",
            "arn": "arn:aws:ec2:us-east-1:610203850228:instance/i-0f04b58d312ba57ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f04b58d312ba57ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061edc2eda0f2b525",
            "private_dns": "ip-10-1-10-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031fd5690c9022126",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da59a859358c48d7",
            "tags": {
              "Name": "Private-Server-1"
            },
            "tags_all": {
              "Name": "Private-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085db822735671a88"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_security_group.allow_all",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.default",
            "data.aws_ami.my_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06beb07943797a85b",
            "arn": "arn:aws:ec2:us-east-1:610203850228:instance/i-0af4909308e3b5ee3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af4909308e3b5ee3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ca243e585cda328",
            "private_dns": "ip-10-1-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.182",
            "public_dns": "ec2-54-81-103-8.compute-1.amazonaws.com",
            "public_ip": "54.81.103.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045cce3f284cbf128",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058199d4d8d6a8267",
            "tags": {
              "Name": "Public-Server-1"
            },
            "tags_all": {
              "Name": "Public-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085db822735671a88"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public_subnet1",
            "aws_vpc.default",
            "data.aws_ami.my_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:internet-gateway/igw-04a970b937b7f4eb4",
            "id": "igw-04a970b937b7f4eb4",
            "owner_id": "610203850228",
            "tags": {
              "Name": "Terraform-IGW"
            },
            "tags_all": {
              "Name": "Terraform-IGW"
            },
            "vpc_id": "vpc-01704566fee15b98a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02744b64b10d9027b",
            "association_id": "eipassoc-02a184af31af7e4c4",
            "connectivity_type": "public",
            "id": "nat-0a3b9709284923ca0",
            "network_interface_id": "eni-0ce36685fd5740c1c",
            "private_ip": "10.1.1.84",
            "public_ip": "107.22.25.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-058199d4d8d6a8267",
            "tags": {
              "Name": "NATgw"
            },
            "tags_all": {
              "Name": "NATgw"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:route-table/rtb-000b8f9ee6ad6132a",
            "id": "rtb-000b8f9ee6ad6132a",
            "owner_id": "610203850228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a970b937b7f4eb4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-MainRT"
            },
            "tags_all": {
              "Name": "Terraform-MainRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01704566fee15b98a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:route-table/rtb-076713c9c0e1dfd55",
            "id": "rtb-076713c9c0e1dfd55",
            "owner_id": "610203850228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a3b9709284923ca0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PvtRT_name"
            },
            "tags_all": {
              "Name": "PvtRT_name"
            },
            "timeouts": null,
            "vpc_id": "vpc-01704566fee15b98a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03988c27639d6254a",
            "route_table_id": "rtb-000b8f9ee6ad6132a",
            "subnet_id": "subnet-058199d4d8d6a8267"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub-rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0523820a7d73e28f9",
            "route_table_id": "rtb-076713c9c0e1dfd55",
            "subnet_id": "subnet-0da59a859358c48d7"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_route_table.pvt-rt1",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:security-group/sg-085db822735671a88",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "From Server VPC to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085db822735671a88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "From internet to server",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "610203850228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-01704566fee15b98a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:subnet/subnet-0da59a859358c48d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da59a859358c48d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610203850228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terrform-PVT-1"
            },
            "tags_all": {
              "Name": "Terrform-PVT-1"
            },
            "vpc_id": "vpc-01704566fee15b98a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:subnet/subnet-058199d4d8d6a8267",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058199d4d8d6a8267",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610203850228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terrform-PUB-1"
            },
            "tags_all": {
              "Name": "Terrform-PUB-1"
            },
            "vpc_id": "vpc-01704566fee15b98a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610203850228:vpc/vpc-01704566fee15b98a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03d19f0d340e31f90",
            "default_route_table_id": "rtb-0e494e006b648f5d1",
            "default_security_group_id": "sg-03b5093c361548e20",
            "dhcp_options_id": "dopt-098c273baa5c80cea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01704566fee15b98a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e494e006b648f5d1",
            "owner_id": "610203850228",
            "tags": {
              "Name": "Terrform-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "Terrform-vpc",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}